# cwsd

./: .git-blame-ignore-revs  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  THIRD_PARTY.md  config.yml  cwsdrc.sample  main.cpp
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  portable.yml
debian/: changelog  control  copyright  rules
docs/: architecture.dot  wsjtx-remote-audio.md
packaging/: publish-ppa.sh
scripts/: build-hamlib-static.sh  build-musl.sh  build-static-deps.sh  rig_monitor.py
shared/: 80-ic7300.rules  cwsd.service  cwsd.service.in
src/: audio_stream_server.cpp  audio_stream_server.h  circular_buffer.h  cw_daemon.cpp  cw_daemon.h  cwdaemon_server.cpp  cwdaemon_server.h  cwsd.cpp  cwsd.h  events.cpp  events.h  logger.cpp  logger.h  remote_key_protocol.h  remote_key_server.cpp  remote_key_server.h  rigctl_server.cpp  rigctl_server.h  rigctld_server.cpp  rigctld_server.h  string_util.h  timer.cpp  timer.h  udp_server.cpp  udp_server.h
src/keyer/: audio_renderer.cpp  audio_renderer.h  keyer.cpp  keyer.h  keyer_char_patterns.cpp  keyer_char_patterns.h  keyer_state_autospace.cpp  keyer_state_autospace.h  keyer_state_half_dot_gap.cpp  keyer_state_half_dot_gap.h  keyer_state_idle.cpp  keyer_state_idle.h  keyer_state_inter_element_space.cpp  keyer_state_inter_element_space.h  keyer_state_inter_word_space.cpp  keyer_state_inter_word_space.h  keyer_state_key_down.cpp  keyer_state_key_down.h  keyer_state_play.cpp  keyer_state_play.h  keyer_state_send_element.cpp  keyer_state_send_element.h  keyer_state_tune.cpp  keyer_state_tune.h  keyer_state_winkeyer.cpp  keyer_state_winkeyer.h  keyer_states.cpp  keyer_states.h  morse.cpp  morse.h  oscillator.cpp  oscillator.h
